# rigidityAugmentations

./: .gitignore  CMakeLists.txt  LICENSE  M-comp.cpp  M-comp.h  README.md  graph  graph.cpp  graph.h  linkedlist.h  main.cpp  redund.cpp  redund.h
InputGraphs/: Test_(2,3)_10004.txt  Test_(2,3)_1002.txt  Test_(2,3)_106.txt  Test_(2,3)_20007.txt  Test_(2,3)_30003.txt  Test_(2,3)_40006.txt  Test_(2,3)_50.txt  Test_(2,3)_50002.txt  Test_(2,3)_5006.txt  Test_(2,3)_505.txt  Test_(2,3)_60005.txt  Test_(2,3)_70001.txt  Test_(2,3)_80004.txt  Test_(2,3)_90000.txt
